# spcproc

./: .gitignore  README.md  pyproject.toml  requirements.txt
data/: Blank_baselinecorrected_filter_spectrum.csv
data/examples/: blank.csv  sample.csv
data/reference/: FTIR_raw_spectra.csv
repo/: run_pipeline_demo.py  run_pipeline_steps.py
scripts/: run_examples.py  run_reference.py
spcproc/: config.py
spcproc/core/: __init__.py  baseline.py  pipeline.py
spcproc/io/: __init__.py  loader.py
spcproc/tests/: test_baseline.py  test_blank.py  test_pipeline.py
src/spcproc/: __init__.py
src/spcproc/core/: baseline.py  blank.py  pipeline.py  reference.py
src/spcproc/io/: __init__.py  loader.py
tests/: test_baseline.py  test_pipeline.py  test_stitch_boundaries.py
