[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "spcproc"
version = "0.1.0"
description = "FTIR spectroscopy data processing toolkit with baseline correction and blank subtraction"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}  # 根据您的实际情况修改
authors = [
    {name = "Your Name", email = "your.email@example.com"}  # 修改为您的信息
]
keywords = ["spectroscopy", "FTIR", "baseline", "data-processing"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    "numpy>=1.20.0",
    "pandas>=1.3.0",
    "rpy2>=3.4.0",  # 用于 R 接口（baseline. py 需要）
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=3.0.0",
    "pytest-mock>=3.6.0",  # 用于 mock 测试
]
test = [
    "pytest>=7.0.0",
    "pytest-cov>=3.0.0",
    "pytest-mock>=3.6.0",
]

# ============================================================
# 关键配置：告诉 setuptools 在 src/ 目录查找包
# ============================================================
[tool.setuptools.packages.find]
where = ["src"]
include = ["spcproc*"]
exclude = ["tests*"]

# ============================================================
# Pytest 配置
# ============================================================
[tool.pytest.ini_options]
# 测试路径
testpaths = ["tests"]

# 关键：让 pytest 能找到 src/spcproc
pythonpath = ["src"]

# 测试选项
addopts = [
    "-v",                          # verbose 输出
    "--strict-markers",            # 严格标记检查
    "--cov=spcproc",              # 代码覆盖率
    "--cov-report=term-missing",   # 显示未覆盖的行
    "--cov-report=html",           # 生成 HTML 报告
]

# 标记定义（用于 test_pipeline.py 中的 @pytest.mark.integration）
markers = [
    "integration: marks tests as integration tests (require R environment)",
    "unit: marks tests as unit tests (fast, no external dependencies)",
]

# 过滤警告
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore:: PendingDeprecationWarning",
]

# ============================================================
# Coverage 配置
# ============================================================
[tool.coverage.run]
source = ["src/spcproc"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/site-packages/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]

# ============================================================
# 可选：Black 代码格式化配置
# ============================================================
[tool.black]
line-length = 88
target-version = ['py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # 默认排除
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

# ============================================================
# 可选：isort 导入排序配置
# ============================================================
[tool.isort]
profile = "black"
src_paths = ["src", "tests"]
line_length = 88